# c3zero

./: Cargo.toml  README.md
src/: lib.rs
src/utils/: httpd.rs  matrix.rs  matrix_1d.rs  message.rs  mod.rs  nvs.rs  rgb.rs  status.rs  status_led.rs  wifi.rs  ws2812.rs  ws2812_matrix.rs  ws2812_rmt.rs
templates/: config_page.html  message_page.html
